welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: '(' expected but '{' found.
	}else if{ (negative && a<0 && b<0)
                ^posNeg:7: error: illegal start of simple expression
}
^